# slopengiine

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  vcpkg.json
.claude/: settings.local.json
Assets/Bistro/: san_giuseppe_bridge_4k.dds
Assets/Meshes/: Mossy_Stone_Wall_ukhgdfyga_Low.fbx
Assets/Scenes/: bistro.json  showcase.json  sponza.json  ssr_test.json  suntemple.json
Assets/Shaders/: Triangle.hlsl
Engine/: CMakeLists.txt
Engine/Shaders/: Basic.hlsl  Bloom.hlsl  DeferredLighting.hlsl  Fullscreen.hlsl  GBufferFill.hlsl  IBL.hlsl  PointShadowDepth.hlsl  SSAO.hlsl  SSAOApply.hlsl  SSAOBlur.hlsl  SSR.hlsl  SSRComposite.hlsl  ShadowDepth.hlsl  Skybox.hlsl  ToneMap.hlsl
Engine/include/Engine/Assets/: AssetManager.h
Engine/include/Engine/Core/: Clock.h  Engine.h  ImGuiLayer.h  Logger.h  Window.h
Engine/include/Engine/Input/: ActionMap.h  GamepadState.h  InputManager.h
Engine/include/Engine/Physics/: AABB.h  CharacterController.h  Intersect.h  OBB.h  PhysicsWorld.h  Plane.h  Ray.h  RigidBodyComponent.h  Sphere.h
Engine/include/Engine/Renderer/: Bloom.h  ConstantBuffer.h  DeferredPipeline.h  ForwardPipeline.h  Frustum.h  FullscreenQuad.h  GBuffer.h  IBLEnvironment.h  IndexBuffer.h  LightEnvironment.h  Material.h  Mesh.h  PointShadowMap.h  RenderQueue.h  RenderStateCache.h  RenderTarget.h  Renderer.h  SSAO.h  SSR.h  SamplerState.h  ShaderLibrary.h  ShadowMap.h  SkyboxRenderer.h  Texture2D.h  ToneMap.h  VertexBuffer.h
Engine/include/Engine/Scene/: ArcballController.h  Component.h  Entity.h  FPSController.h  Scene.h  SceneDescriptor.h  SceneLoader.h  TransformComponent.h
Engine/include/Engine/Scene/Camera/: ArcballController.h  CameraComponent.h  CameraController.h  FPSController.h
Engine/src/Assets/: AssetManager.cpp
Engine/src/Core/: Clock.cpp  Engine.cpp  ImGuiLayer.cpp  Logger.cpp  Window.cpp
Engine/src/Input/: ActionMap.cpp  InputManager.cpp
Engine/src/Physics/: PhysicsWorld.cpp  RigidBodyComponent.cpp
Engine/src/Renderer/: Bloom.cpp  DeferredPipeline.cpp  ForwardPipeline.cpp  FullscreenQuad.cpp  GBuffer.cpp  IBLEnvironment.cpp  IndexBuffer.cpp  LightEnvironment.cpp  Material.cpp  Mesh.cpp  PointShadowMap.cpp  RenderStateCache.cpp  RenderTarget.cpp  Renderer.cpp  SSAO.cpp  SSR.cpp  SamplerState.cpp  ShaderLibrary.cpp  ShadowMap.cpp  SkyboxRenderer.cpp  Texture2D.cpp  ToneMap.cpp  VertexBuffer.cpp
Engine/src/Scene/: ArcballController.cpp  Entity.cpp  FPSController.cpp  Scene.cpp  SceneLoader.cpp  TransformComponent.cpp
Engine/src/Scene/Camera/: ArcballController.cpp  CameraController.cpp  FPSController.cpp
Game/: CMakeLists.txt
Game/src/: main.cpp
Tools/: ConvertTextures.ps1
